11/17/17
- added root path from the root config file, and better log for SHOW_ENV

11/7/17
- added gmedia mlibrary in header search path

11/2/17
- added gdata mlibrary in header search path

11/1/17
- added ghit gdynamic gtouchable mlibrary in header search path

8/11/16
- added gstring, frequencySyncSignal
- added library gstring at the end of mlibrary loader, because gcc is antique and respects library order. 

8/9/16
- added cadmesh python loader

7/13/16
- added textProgressBar


7/12/16
- added splash to includes mlibrary - better include mechanism
- better log for qt
- added gruns library


7/11/16
- checking library existance before adding it to the list of libraries
- using scanfiles to scan mlibrary
- removed obsolete scons packages. mlibrary more uniform


6/28/16
- added mlibrary build


4/10/16
- using c++11 starting from ceInstall 1.4 version 

11/23/15
- removed rpath directive for linux, still needed for mac.

1/21/15
- indented qt log messages
- fixed loadgeant4 for library vector

11/14/14
- more formalization for ccdb and clhep, adding evio, xercesc and geant4

11/13/14
- ccdb and clhelp showenv output formalized


11/11/14
- Removed QtWebKitWidgets dependency 

11/7/14
- fPIC added for qt5 support
- starting to formalize output messages:
  a. include flags
  b. list of libraries
  c. library path
- geant4: removing all non-geant4 entries in the include


10/28/14
- added ccdb scons support

10/27/14:
- QtCore, QtGui, QtWidgets, QtOpenGL, QtPrintSupport are enabled in geant4
  However when compiling non-geant4 apps they need to be included


10/23/14:
- added support for qt5. Removing qt4 support.

10/17/14:
- moved versions of scons_bm one directory up - releases was never really used


3/27/14:
- removed versions/4  from headers path (this will work on qt4 and qt5)
- adding dl library for linux systems, in fedora the compiler does not add that automatically


3/26/14:
- cleanup and more comments