@@ -13,9 +13,11 @@ def loadxerces(env) :
 	## library paths
 	## some OS need lib64
 	xercesldir1 = [XERCESCROOT + '/lib']
-	xercesldir2 = [XERCESCROOT + '/lib64']
 	env.Append(LIBPATH = xercesldir1)
-	env.Append(LIBPATH = xercesldir2)
+
+	if env['PLATFORM'] == 'posix':
+		xercesldir2 = [XERCESCROOT + '/lib64']
+		env.Append(LIBPATH = xercesldir2)
 
 	## libraries
 	xerceslibs = ['xerces-c']
